﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [00 Features]
 - copyfiles now copies LICENSE and Makefile.PL by default.
 - RemovePrereqs::Provided is now standard issue.
 - default_branch now specified for headless Git::NextRelease

 [Dependencies::Stats]
 - Dependencies changed since 2.024002, see misc/*.deps* for details
 - develop: (suggests: -1)
 - runtime: +1

2.024002 2015-06-21T22:23:14Z b786cb3
 [Dependencies::Stats]
 - Dependencies changed since 2.024001, see misc/*.deps* for details
 - develop: +2 -2 (suggests: ↑2)
 - runtime: +1 -1

 [Minor]
 - Now uses MetaYAML::Minimal to generate a reduced META.yml

2.024001 2015-03-01T10:38:03Z 57fafd2
 [Bugfix]
 - Closing the loop with inherently co-depedendent changes.

 [Dependencies::Stats]
 - Dependencies changed since 2.024000, see misc/*.deps* for details
 - develop: +1 ↑2 (suggests: ↑1)
 - runtime: ↑2
 - test: ↑1

2.024000 2015-02-28T17:36:05Z ffe5dea
 [Compatibility Breaking Changes]
 - CommitBuild now builds to 'builds' regardless what branch you're on. This is mostly to negate hassle  involved with
   working on multiple branches blocking activity due to 'dzil build' doing the wrong thing and creating new, disjoint
   branches on its own.

 [Dependencies::Stats]
 - Dependencies changed since 2.023003, see misc/*.deps* for details
 - develop: -1 (suggests: ↑1)

2.023003 2015-02-05T10:55:56Z 66ca3cb
 [Bugfix]
 - Ensure quoted YAML via Travis stack upgrades.

 [Dependencies::Stats]
 - Dependencies changed since 2.023002, see misc/*.deps* for details
 - develop: ↑1 (suggests: ↑1)
 - runtime: (recommends: +1)

2.023002 2015-01-14T07:26:23Z cdffce2
 [Dependencies::Stats]
 - Dependencies changed since 2.023001, see misc/*.deps* for details
 - configure: (recommends: ↓1)
 - develop: +1 ↓56 -1 (recommends: ↓1, suggests: +1)
 - runtime: +1 ↓59 -16 (recommends: +18)
 - test: ↓11 (recommends: +2 ↓3)

 [Features]