@@ -117,6 +117,7 @@ order_by = name
 exclude_filename = README
 exclude_filename = README.mkdn
 exclude_filename = README.pod
+exclude_filename = CONTRIBUTING.mkdn
 exclude_filename = LICENSE
 exclude_filename = Makefile.PL
 include_dotfiles = 1
@@ -132,6 +133,11 @@ include_dotfiles = 1
 [Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
 :version = 0.001002
 skip_perls = 5.8
+
+[Author::KENTNL::CONTRIBUTING / @Author::KENTNL/Author::KENTNL::CONTRIBUTING]
+:version = 0.001002
+document_version = 0.1
+format = mkdn
 
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
@@ -262,6 +268,7 @@ modules = Dist::Zilla::App::Command::bakeini
 ;[Prereqs::SyncVersions]
 -phase = runtime
 -relationship = requires
+Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING = 0.001002
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
 Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
