@@ -405,7 +405,7 @@ sub _none_match {
 
 sub _configure_basic_files {
   my ($self)         = @_;
-  my (@ignore_files) = qw( README README.mkdn README.pod );
+  my (@ignore_files) = qw( README README.mkdn README.pod CONTRIBUTING.mkdn );
   my (@copyfiles)    = ();
   if ( _none_match 'none', @{ $self->copyfiles } ) {
     push @copyfiles, @{ $self->copyfiles };
@@ -424,6 +424,13 @@ sub _configure_basic_files {
   $self->add_plugin( 'MetaYAML::Minimal'        => {} );
   $self->add_plugin( 'Manifest'                 => {} );
   $self->add_plugin( 'Author::KENTNL::TravisCI' => { ':version' => '0.001002' } );
+  $self->add_plugin(
+    'Author::KENTNL::CONTRIBUTING' => {
+      ':version' => '0.001002',
+      document_version => '0.1',
+      format           => 'mkdn',
+    },
+  );
 
   if (@copyfiles) {
     $self->add_named_plugin( 'CopyXBuild' => 'CopyFilesFromBuild', { copy => [@copyfiles] } );
