@@ -5,11 +5,12 @@
  - copyfiles now copies LICENSE and Makefile.PL by default.
  - RemovePrereqs::Provided is now standard issue.
  - default_branch now specified for headless Git::NextRelease
+ - Inject a CONTRIBUTING document standard
 
  [Dependencies::Stats]
  - Dependencies changed since 2.024002, see misc/*.deps* for details
- - develop: (suggests: -1)
- - runtime: +1
+ - develop: +1 (suggests: -1)
+ - runtime: +2
 
 2.024002 2015-06-21T22:23:14Z b786cb3
  [Dependencies::Stats]
